--- a/customTemplates/views/about.hbs
+++ b/customTemplates/views/about.hbs
@@ -13,6 +13,7 @@
     <div class="main-content">
         {{>header}} {{!-- using (>) we can access the partial file --}}
         {{!--<h1>From {{title}} HBS File</h1> --}}
+        <p>This is description of about page.</p>
         <img class='aboutImg' src='/img/test1.png' alt='img'>
         <p>{{use}}</p>
     </div>
